--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "dev-scss": "cross-env SCSS=1 next dev"
   },
   "dependencies": {
     "@types/node": "20.5.1",
@@ -31,7 +32,9 @@
     "@storybook/nextjs": "^7.3.2",
     "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
+    "cross-env": "^7.0.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "node-sass": "^7.0.3",
     "storybook": "^7.3.2"
   }
 }
