--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "container:dev": "npm install && npm dev",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "dev-scss": "cross-env SCSS=1 next dev"
